--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-paper": "^5.14.5",
     "react-native-paper-dropdown": "^2.3.1",
